--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-    "name":"Son of Excercise1",
-    "className":"CustomApp",
-    "server":"https://rally1.rallydev.com",
-    "sdk":"2.0rc1",
-    "remote_javascript":[],
-    "javascript":[
-        "src/App.js",
-        "src/CustomCard.js"
-    ],
-    "remote_css":[],
-    "css":[
-        "styles/app.css"
-    ],
-    "parents":[
-        "ferentchak/RallyCertifiedDeveloperExercise1"
-    ]
+   "name": "Exercise 2",
+   "className": "CustomApp",
+   "server": "https://rally1.rallydev.com",
+   "sdk": "2.0rc1",
+   "remote_javascript": [],
+   "javascript": [
+      "src/App.js",
+      "src/CustomCard.js"
+   ],
+   "remote_css": [],
+   "css": [
+      "styles/app.css"
+   ],
+   "parents": [
+      "ferentchak/RallyCertifiedDeveloperExercise1"
+   ]
 }
